feat:econnect-5:implement endpoint to register student
