# cm.enspd.educ-connect/openapi/main.yaml
@@ -11,12 +11,12 @@ paths:
   /demo:
     get:
       tags:
-        - "Demo"
+      - "Demo"
       summary: "Demo Summary"
       description: "Demo Description"
       operationId: "fetchAllDemo"
       security:
-        - bearerAuth: []
+      - bearerAuth: []
       responses:
         "200":
           description: "successful operation"
@@ -30,12 +30,12 @@ paths:
           description: "Unauthorized"
     post:
       tags:
-        - "Demo"
+      - "Demo"
       summary: "Create a new Demo"
       description: "Creates a new Demo with the provided data"
       operationId: "createDemo"
       security:
-        - bearerAuth: []
+      - bearerAuth: []
       requestBody:
         description: "Demo object to be created"
         required: true
@@ -43,6 +43,34 @@ paths:
           application/json:
             schema:
               $ref: "#/components/schemas/DemoDTO"
+      responses:
+        "201":
+          description: "Demo created successfully"
+          content:
+            application/json:
+              schema:
+                type: "string"
+                format: "uuid"
+        "400":
+          description: "Invalid input"
+        "401":
+          description: "Unauthorized"
+  /register:
+    post:
+      tags:
+      - "User"
+      summary: "Register a new students"
+      description: "Register a new students with the provided data"
+      operationId: "registerStudent"
+      security:
+      - bearerAuth: []
+      requestBody:
+        description: "Demo object to be created"
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/UserDTO"
       responses:
         "201":
           description: "Demo created successfully"
@@ -65,3 +93,61 @@ components:
           format: "uuid"
         name:
           type: "string"
+    UserDTO:
+      type: "object"
+      required:
+      - "password"
+      - "email"
+      - "dateOfBirth"
+      - "leven"
+      - "contact"
+      - "training"
+      properties:
+        password:
+          type: "string"
+        firstname:
+          type: "string"
+        lastname:
+          type: "string"
+        email:
+          type: "string"
+        username:
+          type: "string"
+        birthdate:
+          type: "string"
+          format: "date"
+        contact:
+          $ref: "#/components/schemas/ContactDTO"
+        training:
+          $ref: "#/components/schemas/AcademicTrainingDTO"
+        leven:
+          type: "integer"
+          format: "int64"
+          maximum: 7
+          minimum: 1
+          maxLength: 1
+    ContactDTO:
+      type: "object"
+      properties:
+        phoneNumbers:
+          type: "array"
+          items:
+            $ref: "#/components/schemas/PhoneNumberDTO"
+        whatsappNumber:
+          $ref: "#/components/schemas/PhoneNumberDTO"
+    PhoneNumberDTO:
+      type: "object"
+      properties:
+        countryCode:
+          type: "string"
+          description: "the international code for the country"
+          example: "237 for Cameroon"
+        number:
+          type: "string"
+          description: "the phone number"
+          example: 653492410
+    AcademicTrainingDTO:
+      enum:
+      - "ALTERNANCE"
+      - "INITIAL"
+      - "MASTER_PRO"
